--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,50 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+                tools:context=".MainActivity"
+                android:background="#123456">
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="@string/main_screen_button_text_wheresMyCar"
+        android:id="@+id/mainActivityWMCButton"
+        android:layout_above="@+id/mainActivityWHTButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="66dp"
+        android:gravity="center|top"
+        android:onClick="wheresMyCarClicked"/>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="@string/main_screen_button_text_whatHappenedToday"
+        android:id="@+id/mainActivityWHTButton"
+        android:layout_above="@+id/mainActivityWTButton"
+        android:layout_alignLeft="@+id/mainActivityWTButton"
+        android:layout_alignStart="@+id/mainActivityWTButton"
+        android:layout_marginBottom="66dp"
+        android:gravity="center|top"
+        android:onClick="whatHappenedTodayClicked"/>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="@string/main_screen_button_text_whatsThis"
+        android:id="@+id/mainActivityWTButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="68dp"
+        android:gravity="center|top"
+        android:onClick="whatsThisClicked"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/text_display"
-        android:id="@+id/mainActivityTextDisplay"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Open Ash"
-        android:id="@+id/openAshButton"
+        android:text="Open day helper"
+        android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="104dp"
-        android:onClick="launchAsh" />
+        android:layout_marginTop="46dp"/>
 </RelativeLayout>
