--- a/app/src/main/res/layout/activity_what_happened_today_main.xml
+++ b/app/src/main/res/layout/activity_what_happened_today_main.xml
@@ -8,10 +8,21 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.ashlimeianwarren.saaf.WhatHappenedTodayMainActivity">
 
-    <TextView
-        android:text="What happened today?"
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/wht_maintext"/>
+        android:id="@+id/mainActivity_listView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="88dp" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="New Folder"
+        android:id="@+id/newFolderButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
