--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity"
-                android:background="#123456">
+                android:background="#015981">
 
     <Button
         android:layout_width="200dp"
@@ -17,8 +17,9 @@
         android:layout_above="@+id/mainActivityWHTButton"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="66dp"
-        android:gravity="center|top"
-        android:onClick="wheresMyCarClicked"/>
+        android:gravity="center"
+        android:onClick="wheresMyCarClicked"
+        android:background="#e1e1e1"/>
 
     <Button
         android:layout_width="200dp"
@@ -29,8 +30,9 @@
         android:layout_alignLeft="@+id/mainActivityWTButton"
         android:layout_alignStart="@+id/mainActivityWTButton"
         android:layout_marginBottom="66dp"
-        android:gravity="center|top"
-        android:onClick="whatHappenedTodayClicked"/>
+        android:gravity="center"
+        android:onClick="whatHappenedTodayClicked"
+        android:background="#e1e1e1"/>
 
     <Button
         android:layout_width="200dp"
@@ -40,8 +42,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="68dp"
-        android:gravity="center|top"
-        android:onClick="whatsThisClicked"/>
+        android:gravity="center"
+        android:onClick="whatsThisClicked"
+        android:background="#e1e1e1"/>
 
     <TextView
         android:layout_width="wrap_content"
