--- a/app/src/main/res/layout/activity_what_happened_today_main.xml
+++ b/app/src/main/res/layout/activity_what_happened_today_main.xml
@@ -6,7 +6,8 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.ashlimeianwarren.saaf.WhatHappenedTodayMainActivity">
+                tools:context="com.ashlimeianwarren.saaf.WhatHappenedTodayMainActivity"
+                android:background="#015981">
 
     <ListView
         android:layout_width="wrap_content"
@@ -24,5 +25,7 @@
         android:text="New Folder"
         android:id="@+id/newFolderButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="newFolderClicked"
+        android:background="#e1e1e1"/>
 </RelativeLayout>
