--- a/app/src/main/res/layout/activity_wheres_my_car_main.xml
+++ b/app/src/main/res/layout/activity_wheres_my_car_main.xml
@@ -12,6 +12,19 @@
         android:text="Where&apos;s my car?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/wmc_maintext"/>
+        android:id="@+id/wmc_maintext"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/getLocButton"
+        android:layout_below="@+id/wmc_maintext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="79dp"
+        android:onClick="showLocation"/>
 
 </RelativeLayout>
