--- a/app/src/main/res/layout/activity_whats_this_main.xml
+++ b/app/src/main/res/layout/activity_whats_this_main.xml
@@ -7,12 +7,48 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.ashlimeianwarren.saaf.WhatsThisMainActivity"
-                android:id="@+id/WT_maintext">
+                android:id="@+id/WT_maintext"
+                android:background="#015981">
 
     <TextView
         android:text="What&apos;s this?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/whatsthis_maintext"/>
+        android:id="@+id/whatsthis_maintext"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="30dp"
+        android:autoText="true"
+        android:textColor="#ffffffff"
+        android:textAlignment="center" />
+
+    <Button android:id="@+id/button_tag"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Places"
+            android:layout_marginTop="73dp"
+            android:background="#E1E1E1"
+            android:layout_below="@+id/whatsthis_maintext"
+            android:layout_centerHorizontal="true" />
+
+    <Button android:id="@+id/button_beam"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="People"
+            android:layout_marginTop="47dp"
+            android:layout_below="@+id/button_tag"
+            android:layout_centerHorizontal="true"
+            android:background="#E1E1E1" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Send Data"
+        android:background="#E1E1E1"
+        android:layout_marginTop="47dp"
+        android:layout_below="@+id/button_beam"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
