--- a/app/src/main/res/layout/activity_whats_this_main.xml
+++ b/app/src/main/res/layout/activity_whats_this_main.xml
@@ -22,33 +22,34 @@
         android:textColor="#ffffffff"
         android:textAlignment="center" />
 
-    <Button android:id="@+id/button_tag"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Places"
-            android:layout_marginTop="73dp"
-            android:background="#E1E1E1"
-            android:layout_below="@+id/whatsthis_maintext"
-            android:layout_centerHorizontal="true" />
-
-    <Button android:id="@+id/button_beam"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="People"
-            android:layout_marginTop="47dp"
-            android:layout_below="@+id/button_tag"
-            android:layout_centerHorizontal="true"
-            android:background="#E1E1E1" />
-
     <Button
-        android:id="@+id/button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Send Data"
-        android:background="#E1E1E1"
-        android:layout_marginTop="47dp"
-        android:layout_below="@+id/button_beam"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="People"
+        android:id="@+id/peopleButton"
+        android:layout_below="@+id/whatsthis_maintext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="84dp"
+        android:onClick="peopleButtonClicked"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Places"
+        android:id="@+id/placesButton"
+        android:layout_below="@+id/peopleButton"
+        android:layout_alignLeft="@+id/peopleButton"
+        android:layout_alignStart="@+id/peopleButton"
+        android:layout_marginTop="44dp"
+        android:onClick="placesButtonClicked"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Content"
+        android:id="@+id/addContentButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="addContentClicked"/>
 
 </RelativeLayout>
