--- a/app/src/main/res/layout/activity_what_happened_today_main.xml
+++ b/app/src/main/res/layout/activity_what_happened_today_main.xml
@@ -13,11 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mainActivity_listView"
-        android:layout_alignParentBottom="false"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="88dp"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
