--- a/app/src/main/res/layout/activity_whats_this_add_content.xml
+++ b/app/src/main/res/layout/activity_whats_this_add_content.xml
@@ -28,22 +28,14 @@
         android:layout_marginTop="20dp"/>
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:id="@+id/dataTextInput"
-        android:layout_below="@+id/dataTitleInput"
-        android:layout_centerHorizontal="true"
-        android:hint="Data Text"
-        android:layout_marginBottom="10dp"/>
-
-    <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/photoTitleInput"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:hint="Photo title"/>
+        android:hint="Photo title"
+        android:layout_below="@+id/scrollView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="40dp"/>
 
     <Button
         android:layout_width="100dp"
@@ -73,4 +65,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="saveTagClicked"/>
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="130dp"
+        android:id="@+id/scrollView2"
+        android:layout_below="@+id/dataTitleInput"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:id="@+id/dataTextInput"
+            android:layout_below="@+id/dataTitleInput"
+            android:layout_centerHorizontal="true"
+            android:hint="Data Text"
+            android:layout_marginBottom="10dp"/>
+    </ScrollView>
 </RelativeLayout>
