--- a/app/src/main/res/layout/activity_whats_this_data_display.xml
+++ b/app/src/main/res/layout/activity_whats_this_data_display.xml
@@ -47,7 +47,9 @@
         android:id="@+id/imgOne"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:onClick="imageOneClicked"
+        android:clickable="true"/>
 
     <ImageView
         android:layout_width="150dp"
@@ -57,6 +59,8 @@
         android:layout_alignRight="@+id/scvDescriptionScroll"
         android:layout_alignEnd="@+id/scvDescriptionScroll"
         android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:clickable="true"
+        android:onClick="imageTwoClicked"/>
 
 </RelativeLayout>
