--- a/app/src/main/res/layout/activity_wheres_my_car_main.xml
+++ b/app/src/main/res/layout/activity_wheres_my_car_main.xml
@@ -20,7 +20,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Save Car Location"
         android:id="@+id/getLocButton"
         android:layout_below="@+id/wmc_maintext"
         android:layout_centerHorizontal="true"
