--- a/app/src/main/res/layout/custom_location_list.xml
+++ b/app/src/main/res/layout/custom_location_list.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/">
+    android:id="@+id/relativeLayout">
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/customLocation_pinIcon" />
+        android:id="@+id/customLocation_pinIcon"
+        android:src="@drawable/pinicon" />
 
     <TextView
         android:layout_width="fill_parent"
