--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
                 android:background="#015981">
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:text="@string/main_screen_button_text_wheresMyCar"
         android:id="@+id/mainActivityWMCButton"
@@ -19,28 +19,42 @@
         android:layout_marginBottom="66dp"
         android:gravity="center"
         android:onClick="wheresMyCarClicked"
-        android:background="#e1e1e1"/>
+        android:background="@drawable/button_style"
+        android:textColor="@color/button_text_colour" />
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:text="@string/main_screen_button_text_whatHappenedToday"
         android:id="@+id/mainActivityWHTButton"
         android:gravity="center"
         android:onClick="whatHappenedTodayClicked"
-        android:background="#e1e1e1"
+        android:background="@drawable/button_style"
+        android:textColor="@color/button_text_colour"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/mainActivityWMCButton"
         android:layout_alignStart="@+id/mainActivityWMCButton"
-        android:layout_marginBottom="152dp"/>
+        android:layout_marginBottom="152dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Open day helper"
+        android:text="Open Day \n     App"
         android:id="@+id/textView"
+        android:textSize="30dp"
+        android:textColor="#ffffffff"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"/>
+        android:layout_marginTop="-5dp"
+        android:layout_marginRight="-5dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/main_activity_logo"
+        android:focusableInTouchMode="false"
+        android:src="@drawable/uealogo_white_stacked_small"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
 </RelativeLayout>
