--- a/app/src/main/res/layout/activity_what_happend_today_note.xml
+++ b/app/src/main/res/layout/activity_what_happend_today_note.xml
@@ -6,16 +6,20 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.ashlimeianwarren.saaf.WhatHappendTodayNoteActivity">
+                tools:context="com.ashlimeianwarren.saaf.WhatHappendTodayNoteActivity"
+    android:background="#015981">
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/scrollView"
+        android:id="@+id/wht_note_scrollview"
         android:layout_above="@+id/saveTextButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="32dp">
+        android:layout_alignParentEnd="false"
+        android:layout_marginBottom="20dp"
+        android:fillViewport="false"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/wht_note_title">
 
         <EditText
             android:layout_width="fill_parent"
@@ -23,15 +27,29 @@
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/textNoteInput"
-            android:editable="true"/>
+            android:editable="true"
+            android:autoText="false" />
     </ScrollView>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Save text"
+        android:text="SAVE NOTE"
         android:id="@+id/saveTextButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="saveTextClicked"/>
+        android:onClick="saveTextClicked"
+        android:background="@drawable/button_style"
+        android:textColor="@color/button_text_colour" />
+
+    <TextView
+        android:text="Text Note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/wht_note_title"
+        android:textSize="30dp"
+        android:autoText="false"
+        android:textColor="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
