--- a/app/src/main/res/layout/custom_note_list.xml
+++ b/app/src/main/res/layout/custom_note_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="#015981">
 
     <ImageView
         android:layout_width="50dp"
@@ -9,21 +10,18 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/fileicon"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp" />
+        android:src="@drawable/fileicon" />
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Test File"
         android:id="@+id/customNote_noteName"
         android:layout_alignBottom="@+id/customNote_noteIcon"
         android:layout_toRightOf="@+id/customNote_noteIcon"
-        android:textSize="30dp"
+        android:textSize="20dp"
+        android:layout_alignTop="@+id/customNote_noteIcon"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        android:gravity="center_vertical|fill_vertical"
+        android:textColor="#ffffffff" />
 </RelativeLayout>
