What Happened Today appearance updated. What's This appearance changes begun.

--- a/app/src/main/res/layout/activity_what_happend_today_note.xml
+++ b/app/src/main/res/layout/activity_what_happend_today_note.xml
@@ -28,7 +28,8 @@
             android:ems="10"
             android:id="@+id/textNoteInput"
             android:editable="true"
-            android:autoText="false" />
+            android:autoText="false"
+            android:textColor="#ffffffff" />
     </ScrollView>
 
     <Button
