--- a/app/src/main/res/layout/activity_whats_this_image_display.xml
+++ b/app/src/main/res/layout/activity_whats_this_image_display.xml
@@ -6,7 +6,8 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.ashlimeianwarren.saaf.WhatsThisImageDisplayActivity">
+                tools:context="com.ashlimeianwarren.saaf.WhatsThisImageDisplayActivity"
+    android:background="#015981">
 
     <TextView
         android:layout_width="fill_parent"
