--- a/app/src/main/res/layout/activity_wheres_my_car_travel.xml
+++ b/app/src/main/res/layout/activity_wheres_my_car_travel.xml
@@ -4,46 +4,57 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ashlimeianwarren.saaf.WheresMyCarTravelActivity">
+    tools:context="com.ashlimeianwarren.saaf.WheresMyCarTravelActivity"
+    android:background="#015981"
+    android:id="@+id/">
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/pointerIconPicTwo"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/destDisplay"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="80dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/distDisplay"
+        android:textSize="30dp"
+        android:textColor="#ffffffff"
+        android:layout_below="@+id/distanceLabel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Distance"
+        android:id="@+id/distanceLabel"
+        android:textColor="#ffffffff"
+        android:textSize="30dp"
+        android:layout_below="@+id/pointerIconPicTwo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/destDisplay"
+        android:textColor="#ffffffff"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/destLabel" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Destination"
+        android:id="@+id/destLabel"
+        android:textColor="#ffffffff"
+        android:textSize="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="114dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Info Two"
-        android:id="@+id/distDisplay"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/pointerIconPicTwo"
-        android:layout_alignRight="@+id/pointerIconPicTwo"
-        android:layout_alignEnd="@+id/pointerIconPicTwo"
-        android:layout_marginRight="25dp"
-        android:layout_marginEnd="25dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Dist: "
-        android:id="@+id/distanceLabel"
-        android:layout_alignTop="@+id/distDisplay"
-        android:layout_toLeftOf="@+id/distDisplay"
-        android:layout_toStartOf="@+id/distDisplay" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Destination"
-        android:id="@+id/destDisplay"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="20dp" />
 
 </RelativeLayout>
