--- a/app/src/main/res/layout/custom_location_list.xml
+++ b/app/src/main/res/layout/custom_location_list.xml
@@ -11,7 +11,8 @@
         android:id="@+id/customLocation_pinIcon"
         android:src="@drawable/pinicon"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="fill_parent"
