--- a/app/src/main/res/layout/activity_wheres_my_car_travel.xml
+++ b/app/src/main/res/layout/activity_wheres_my_car_travel.xml
@@ -5,8 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ashlimeianwarren.saaf.WheresMyCarTravelActivity"
-    android:background="#015981"
-    android:id="@+id/">
+    android:background="#015981" >
 
     <ImageView
         android:layout_width="200dp"
@@ -14,14 +13,14 @@
         android:id="@+id/pointerIconPicTwo"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/destDisplay"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="80dp" />
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="60dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/distDisplay"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:textColor="#ffffffff"
         android:layout_below="@+id/distanceLabel"
         android:layout_centerHorizontal="true" />
